Fix bug with NotesContainer overlapping with Header

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,6 +3,7 @@
 
 .header {
   position: fixed;
+  z-index: 9999;
   top: 0;
   width: 100%;
   height: 5rem;
